Fixed spacing between author and intro section

--- a/styles.css
+++ b/styles.css
@@ -353,7 +353,7 @@ footer {
 
     @media only screen and (max-width: 600px) {
       .authorText {
-        font-size: 80% !important;
+        font-size: 70% !important;
       }
 
       .intro-container h1 {
@@ -432,7 +432,7 @@ header {
 }
 
 .intro-container {
-    margin-top: 3rem;
+    margin-top: 80px;
     margin-left: 10px;
     margin-right: 10px;
     text-align: center;
